a1/brendan_gordon/TEST_PROGRAMS/invalidtype/hongji_chen/whileFloat.min
var x : float;

x = 9.;

while x do
	print x;
	x = x - 1.;
done
